# desafio_palavra

./: .env_template  LICENSE  Procfile  README.md  manage.py  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
desafio_palavras_api/: asgi.py  settings.py  urls.py  wsgi.py
desafio_palavras_app/: apps.py  colector.py  config.toml  urls.py  views.py
tests/: test_cache.py  test_colector.py
