[metadata]
name = desafio_palavras
description = Desafio de Palavras
author = Samuelson Pajeu
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    desafio_palavras_app

python_requires = >=3.7
package_dir =
    =.
zip_safe = False

[options.extras_require]
testing = 
    pytest>=7.1.2
    pytest-cov>=3.0.0
    flake8>=5.0.4
    tox>=3.25.1

[options.package_data]
desafio_palavras_app = py.typed

[flake8]
max-line-length = 180